--- a/src/_metronic/assets/sass/layout/sidebar/_sidebar.scss
+++ b/src/_metronic/assets/sass/layout/sidebar/_sidebar.scss
@@ -45,7 +45,8 @@
           > .menu-title {
             font-weight: 400;
             // font-weight: $font--weight-bold;
-            font-size: 1.1rem;
+            // font-size: 1.1rem;
+            font-size: 1.05rem;
           }
         }
       }
