--- a/src/_metronic/assets/sass/az-styles.scss
+++ b/src/_metronic/assets/sass/az-styles.scss
@@ -106,3 +106,11 @@
     border-color: #2d2d43;
   }
 }
+
+[data-kt-app-layout=dark-sidebar] .app-sidebar .menu > .menu-item .menu-link.active {
+    background-color: #2A2A3C !important;
+}
+
+// .react-select__menu-portal {
+//   z-index: 9999 !important;
+// }
