antes del implementaicon de roles

--- a/src/_metronic/assets/sass/az-styles.scss
+++ b/src/_metronic/assets/sass/az-styles.scss
@@ -114,3 +114,12 @@
 // .react-select__menu-portal {
 //   z-index: 9999 !important;
 // }
+.action-row {
+  max-width: 10rem !important;
+  // display: flex;
+}
+
+.w-actions{
+  width: 130px !important;
+  min-width: 130px !important;
+}
